<resources>
    <string name="app_name">Reminder</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="icon">Icon</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="account_not_exist_register_here">Account not exist? Register here!</string>
    <string name="add">add</string>
    <string name="user">user</string>
    <string name="avatar">avatar</string>
    <string name="settings">Settings</string>
    <string name="set_new_username">Set new username</string>
    <string name="set_new_email">Set new email</string>
    <string name="set_new_password">Set new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="title_activity_maps">Map</string>

</resources>